<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
              android:orientation="vertical"
             tools:context=".ResetPasswordDialogFragment">

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/editText"
        android:inputType="textEmailAddress"
        android:hint="@string/emailHint"/>

    <Button
        android:id="@+id/buttonSubmit"
        style="@style/genericStyle"
        android:text="@string/buttonSendEmail"/>

    <Button
        android:id="@+id/buttonCancel"
        style="@style/genericStyle"
        android:text="@string/buttonCancel"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</LinearLayout>